add reverse proxy and refactor code
